--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "bootstrap-vue-3": "^0.5.1",
     "pinia": "^2.1.6",
