--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons-vue": "^1.10.3",
     "bootstrap-vue-3": "^0.5.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
