--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "serve": "vite serve",
+	"dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
