--- a/package.json
+++ b/package.json
@@ -9,32 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-regular-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@popperjs/core": "^2.11.8",
-    "axios": "^1.5.1",
-    "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.1",
-    "bootstrap-icons-vue": "^1.11.1",
-    "bootstrap-vue-3": "^0.5.1",
-    "pinia": "^2.1.7",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5",
-    "vuex": "^4.1.0"
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-brands-svg-icons": "6.4.2",
+    "@fortawesome/free-regular-svg-icons": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
+    "@fortawesome/vue-fontawesome": "3.0.3",
+    "@popperjs/core": "2.11.8",
+    "axios": "1.5.1",
+    "bootstrap": "5.3.2",
+    "bootstrap-icons": "1.11.1",
+    "bootstrap-icons-vue": "1.11.1",
+    "bootstrap-vue-3": "0.5.1",
+    "pinia": "2.1.7",
+    "vue": "3.3.4",
+    "vue-router": "4.2.5",
+    "vuex": "4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.4.0",
-<<<<<<< HEAD
-    "vite": "^4.5.0"
-=======
-<<<<<<< HEAD
-    "vite": "^4.5.0"
-=======
-    "vite": "^4.4.11"
->>>>>>> c36f5c7075e5fa96b649b34ff2cb96b7fe3df83d
->>>>>>> origin/kadir
+    "@vitejs/plugin-vue": "4.4.0",
+    "vite": "4.5.0"
   }
 }
